--- a/s23.markdown
+++ b/s23.markdown
@@ -112,7 +112,10 @@ If you need a permission code to join the course, please fill out this [form](ht
       </tr>
       <tr>
          <td>01/31</td>
-         <td>Libraries and Compilers to build ZKP</td>
+         <td>Libraries and Compilers to build ZKP
+        | <a href="https://youtube.com/playlist?list=PLS01nW3RtgoqqvF39f11ncNAClgSLPlXD"> Lecture </a>
+             | <a href = "{{site.baseurl}}/assets/lecture3-2023.pdf"> Slides </a>
+        </td>
       </tr>
       <tr>
          <td colspan=2 align=center> <b>2. Efficient Constructions of ZKP</b> </td>
