--- a/s23.markdown
+++ b/s23.markdown
@@ -122,7 +122,7 @@ If you need a permission code to join the course, please fill out this [form](ht
               <li><a href="https://github.com/rdi-berkeley/zkp-course-lecture3-code">Code from Lecture</a></li>
               <li><a href="https://docs.circom.io/">Circom Documentation</a></li>
               <li><a href="https://github.com/arkworks-rs/r1cs-tutorial/">Arkworks Tutorial</a></li>
-              <li><a href="https://zokrates.github.io/">ZoKrates documentation</a></li>
+              <li><a href="https://zokrates.github.io/">ZoKrates Documentation</a></li>
             </ul>
         </td>
       </tr>
