--- a/s23.markdown
+++ b/s23.markdown
@@ -97,6 +97,7 @@ If you need a permission code to join the course, please fill out this [form](ht
          <td>01/24</td>
          <td>Overview of Modern SNARK Constructions 
         | <a href = "https://youtube.com/playlist?list=PLS01nW3Rtgoo_0Y-X5bQ32SyDbMiGFqee"> Lecture </a>
+        | <a href = "https://youtube.com/playlist?list=PLS01nW3Rtgoo_0Y-X5bQ32SyDbMiGFqee"> Playlist </a>
         | <a href ="https://forms.gle/jyRJmNttcd2knFXz9"> Quiz </a>
         | <a href="{{site.baseurl}}/assets/Lecture2-2023.pdf"> Slides </a>
          <br> 
@@ -114,6 +115,7 @@ If you need a permission code to join the course, please fill out this [form](ht
          <td>01/31</td>
          <td>Libraries and Compilers to build ZKP
           | <a href="https://youtube.com/playlist?list=PLS01nW3RtgoqqvF39f11ncNAClgSLPlXD"> Lecture </a>
+          | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgoqqvF39f11ncNAClgSLPlXD"> Playlist </a>
           | <a href = "{{site.baseurl}}/assets/lecture3-2023.pdf"> Slides </a>
            <br>
            <br>
