--- a/s23.markdown
+++ b/s23.markdown
@@ -116,6 +116,7 @@ If you need a permission code to join the course, please fill out this [form](ht
          <td>Libraries and Compilers to build ZKP
           | <a href="https://youtube.com/playlist?list=PLS01nW3RtgoqqvF39f11ncNAClgSLPlXD"> Lecture </a>
           | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgoqqvF39f11ncNAClgSLPlXD"> Playlist </a>
+           | <a href="https://forms.gle/9Q3PQzjFextViGE16"> Quiz </a>
           | <a href = "{{site.baseurl}}/assets/lecture3-2023.pdf"> Slides </a>
            <br>
            <br>
