--- a/s23.markdown
+++ b/s23.markdown
@@ -101,7 +101,7 @@ If you need a permission code to join the course, please fill out this [form](ht
         | <a href = "https://youtube.com/playlist?list=PLS01nW3Rtgoo_0Y-X5bQ32SyDbMiGFqee"> Playlist </a>
         | <a href ="https://forms.gle/jyRJmNttcd2knFXz9"> Quiz </a>
         | <a href="{{site.baseurl}}/assets/Lecture2-2023.pdf"> Slides </a>
-        | <a href="{{site.baseurl}}/assets/Disc2.pdf"> Notes </a>
+        | <a href="{{site.baseurl}}/assets/Disc2-edited.pdf"> Notes </a>
          <br> 
          <br> 
          <b> Readings </b>
