--- a/s23.markdown
+++ b/s23.markdown
@@ -140,8 +140,9 @@ If you need a permission code to join the course, please fill out this [form](ht
       <tr>
          <td>02/07</td>
          <td>Interactive Proofs (IP)
-        | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgopePvLcZgMJK8gC5trUWVsT"> Playlist </a> 
-        | <a href = "{{site.baseurl}}/assets/lecture4.pdf"> Slides </a></td>
+           | <a href = "https://youtu.be/YtyE84PNj1o"> Lecture </a>
+           | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgopePvLcZgMJK8gC5trUWVsT"> Playlist </a> 
+           | <a href = "{{site.baseurl}}/assets/lecture4.pdf"> Slides </a></td>
       </tr>
       <tr>
          <td>02/14</td>
