--- a/s23.markdown
+++ b/s23.markdown
@@ -347,8 +347,8 @@ The article’s marking criteria can be found below:
 | Assignment            | Released  | Deadline
 | :-- | :-- | :--
 | Group formation      | 01/23     | 02/06
-| Project proposal    | 02/07     | 02/27
-| Lab               | 02/28     | 03/13
+| Project proposal    | 02/07     | ~~02/27~~ 03/03
+| [Lab](https://github.com/rdi-berkeley/zkp-mooc-lab)  | 02/28     | 03/13
 | Project milestone     | 03/21     | 03/26
 | HW     | 04/04     | 04/17
 | Project presentation  | 04/18     | 05/01
