--- a/s23.markdown
+++ b/s23.markdown
@@ -211,6 +211,7 @@ If you need a permission code to join the course, please fill out this [form](ht
          <td>ZKP based on Error-Correcting Codes
         | <a href = "https://youtu.be/1S7ZjqG9uyI"> Lecture </a> 
            | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgopEpcPnXiXsHPO8HsaGUgmd"> Playlist </a> 
+           | <a href = "https://forms.gle/5qis42djSbxCH3rr5"> Quiz </a>
              | <a href = "{{site.baseurl}}/assets/lecture7.pdf"> Slides </a>
              
              <br> 
