--- a/s23.markdown
+++ b/s23.markdown
@@ -228,7 +228,11 @@ If you need a permission code to join the course, please fill out this [form](ht
       </tr>
       <tr>
          <td>03/07</td>
-         <td>Transparent ZKP</td>
+        <td>Transparent ZKP
+          | <a href = "https://youtu.be/A3edAQDPnDY"> Lecture </a> 
+           | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgorRZsBnqch6gGBStZB9VVrM"> Playlist </a>
+             | <a href = "{{site.baseurl}}/assets/lecture8.pdf"> Slides </a>
+          </td>
       </tr>
       <tr>
          <td colspan=2 align=center> <font size="-0.5" style="font-weight: bolder">2.3. Linear PCP</font> </td>
