--- a/s23.markdown
+++ b/s23.markdown
@@ -232,6 +232,19 @@ If you need a permission code to join the course, please fill out this [form](ht
           | <a href = "https://youtu.be/A3edAQDPnDY"> Lecture </a> 
            | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgorRZsBnqch6gGBStZB9VVrM"> Playlist </a>
              | <a href = "{{site.baseurl}}/assets/lecture8.pdf"> Slides </a>
+          
+          <br>
+             <br> 
+             
+             <b>Readings</b>
+
+                <ul>
+                <li><a href="https://eccc.weizmann.ac.il/report/2017/134/">FRI paper</a></li>
+                <li><a href="https://eprint.iacr.org/2020/654.pdf">Best existing soundness analysis of FRI</a></li>
+                <li><a href="https://eprint.iacr.org/2019/1020">Polynomial commitments from FRI</a></li>
+                <li><a href="https://eprint.iacr.org/2018/1004.pdf">Round-by-round soundness, Fiat-Shamir, and sum-check</a></li>
+                </ul>
+          
           </td>
       </tr>
       <tr>
