--- a/s23.markdown
+++ b/s23.markdown
@@ -254,7 +254,11 @@ If you need a permission code to join the course, please fill out this [form](ht
       </tr>
       <tr>
          <td>03/14</td>
-         <td>Linear Probabilistically Checkable Proofs (PCP)</td>
+          <td>Linear Probabilistically Checkable Proofs (PCP)
+          | <a href = "https://youtu.be/I7TXIHXamwM"> Lecture </a> 
+           | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgorEgSixlZA2rJ-2q7_eAKe3"> Playlist </a>
+             | <a href = "{{site.baseurl}}/assets/lecture9.pdf"> Slides </a>
+          </td>
       </tr>
       <tr>
          <td colspan=2 align=center> <font size="-0.5" style="font-weight: bolder">2.4. Recursive SNARKs</font> </td>
