--- a/s23.markdown
+++ b/s23.markdown
@@ -259,6 +259,17 @@ If you need a permission code to join the course, please fill out this [form](ht
            | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgorEgSixlZA2rJ-2q7_eAKe3"> Playlist </a>
             | <a href = "https://forms.gle/bCpdFz1QbdU5jEwR9"> Quiz </a>
              | <a href = "{{site.baseurl}}/assets/lecture9.pdf"> Slides </a>
+            
+            <br>
+            <br>
+
+              <b>Readings</b>
+
+                <ul>
+                <li><a href="https://eprint.iacr.org/2013/279.pdf">Pinocchio</a></li>
+                <li><a href="https://eprint.iacr.org/2012/718">Succinct Non-Interactive Arguments via Linear Interactive Proofs</a></li>
+                <li><a href="https://eprint.iacr.org/2016/260.pdf">Groth16</a></li>
+            </ul>
           </td>
       </tr>
       <tr>
