--- a/s23.markdown
+++ b/s23.markdown
@@ -277,7 +277,10 @@ If you need a permission code to join the course, please fill out this [form](ht
       </tr>
       <tr>
          <td>03/21</td>
-         <td>Recursive SNARKs, Aggregation and Accumulation</td>
+         <td>Recursive SNARKs, Aggregation and Accumulation
+        | <a href = "https://youtu.be/0LW-qeVe6QI"> Lecture </a> 
+           | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgopkbOmAfolTngGbnJ3SYmYu"> Playlist </a>
+             | <a href = "{{site.baseurl}}/assets/lecture10.pdf"> Slides </a></td>
       </tr>
       <tr>
          <td colspan=2 align=center> <font size="-0.5" style="font-weight: bolder">Spring Break (03/27 - 03/31)</font> </td>
