--- a/s23.markdown
+++ b/s23.markdown
@@ -315,6 +315,7 @@ If you need a permission code to join the course, please fill out this [form](ht
       <tr>
          <td>04/11</td>
          <td>Overview of ZKP Applications &amp; zkRollup and zkEVM
+           | <a href = "https://youtu.be/vuQGdbpDWcs"> Lecture </a>
          | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgoqV9S-crVXIkMoaE1JRJwML"> Playlist </a>
              | <a href = "{{site.baseurl}}/assets/lecture12.pdf"> Slides </a>
         </td>
