--- a/s23.markdown
+++ b/s23.markdown
@@ -433,7 +433,7 @@ The article’s marking criteria can be found below:
 | [Lab](https://github.com/rdi-berkeley/zkp-mooc-lab)  | 02/28     | 03/13
 | [Project milestone](https://forms.gle/P3vrcmTwzckwNdpQ9)     | 03/21     | 03/26
 | HW     | 04/04     | 04/17
-| Project presentation  | 04/18     | 05/01
+| Project presentation  | -    | 04/25 (In Class)
 | Project final report  | 05/02    | 05/12
 
 
