--- a/s23.markdown
+++ b/s23.markdown
@@ -337,7 +337,10 @@ If you need a permission code to join the course, please fill out this [form](ht
       </tr>
       <tr>
          <td>04/25</td>
-         <td>Formal Verification of ZKP</td>
+         <td>Formal Verification of ZKP 
+           | <a href = "https://youtu.be/av7Wq742GIA"> Lecture </a> 
+           | <a href = "https://youtube.com/playlist?list=PLS01nW3RtgorMPv-awIn16HAdmyfIqsNj"> Playlist </a>
+         </td>
       </tr>
       <tr>
          <td>05/02</td>
