--- a/s23.markdown
+++ b/s23.markdown
@@ -322,6 +322,7 @@ If you need a permission code to join the course, please fill out this [form](ht
              <br> 
              Building opcode compatible zk EVMs
              | <a href = "https://youtu.be/Crzw7ccuHd0"> Lecture </a>
+             | <a href = "{{site.baseurl}}/assets/lecture_opcode.pdf"> Slides </a>
              
           </td>
       </tr>
